# nilm_analyzer

./: .gitignore  LICENSE  config.json  data_loader.py  downloads.txt  environment.yml  loaders.py  pyproject.toml  readme.md  utilities.py
metadata/ampds/: building1.yaml
metadata/deddiag/: house_00.tsv  house_01.tsv  house_02.tsv  house_03.tsv  house_04.tsv  house_05.tsv  house_06.tsv  house_07.tsv  house_08.tsv  house_09.tsv  house_10.tsv  house_11.tsv  house_12.tsv  house_13.tsv  house_14.tsv
metadata/gelap/hh-01/: info.json
metadata/gelap/hh-02/: info.json
metadata/gelap/hh-03/: info.json
metadata/gelap/hh-04/: info.json
metadata/gelap/hh-05/: info.json
metadata/gelap/hh-06/: info.json
metadata/gelap/hh-07/: info.json
metadata/gelap/hh-08/: info.json
metadata/gelap/hh-09/: info.json
metadata/gelap/hh-10/: info.json
metadata/gelap/hh-11/: info.json
metadata/gelap/hh-12/: info.json
metadata/gelap/hh-13/: info.json
metadata/gelap/hh-14/: info.json
metadata/gelap/hh-15/: info.json
metadata/iawe/: building1.yaml
metadata/refit/: REFIT_README.txt  building1.yaml  building10.yaml  building11.yaml  building13.yaml  building15.yaml  building16.yaml  building18.yaml  building2.yaml  building20.yaml  building21.yaml  building3.yaml  building5.yaml  building6.yaml  building7.yaml  building9.yaml
metadata/ukdale/: building1.yaml  building2.yaml  building3.yaml  building4.yaml  building5.yaml
modules/: active_durations.py  parser.py  validations.py
utilities/: active_durations.py  configuration.py  normalisation.py  parser.py  time_utils.py
(+5 files in other folders)
